# radian

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_build.yml  linux.yml  macos.yml  windows.yml
cmake/: PreventInSourceBuilds.cmake  RadianTest.cmake
include/radian/: radian-internal.h  radian.h
test/: CMakeLists.txt  test_read_be.c  test_read_le.c  test_read_write.c  test_write_be.c  test_write_le.c
